IC-Test/objects/SampleRequest__c.object
<CustomObject>
    <description>This screen allows you to enter sample requests and track them thru the shipping process.  You can run reports to see what products have been requested by accounts and producers.</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000000jjAZEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>Account Owner populated from DCS, Customer Master (CSI).</description>
        <formula>AccountId__r.SalesRepName__c</formula>
        <inlineHelpText>Account Owner populated from DCS, Customer Master (CSI).</inlineHelpText>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Purchase_Date__c</fullName>
        <description>Date of the Actual Purchase of the Sampled product.</description>
        <inlineHelpText>Date of the Actual Purchase of the sampled product.</inlineHelpText>
        <label>Actual Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Picklist_Mod_Date__c</fullName>
        <description>Date that the Approved? field was last modified.</description>
        <label>Approved Picklist Mod Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <description>Approval of sample yes/no field.</description>
        <inlineHelpText>Has the sample been approved?  If no, please fill out the &quot;Reason Not Approved&quot; field.</inlineHelpText>
        <label>Approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bench_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bench Sample status per Steve Moore &amp; Shirley Schumacher.</description>
        <inlineHelpText>Bench Sample or stock sample for products used in the lab but not for a specific blend or formulation.</inlineHelpText>
        <label>Bench Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-To Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000000jjAcEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>Ship To Contact ID from SFDC.</description>
        <formula>ContactId__r.Id</formula>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateNeeded__c</fullName>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dead_Reason__c</fullName>
        <description>Reason why Sample was never purchased.</description>
        <inlineHelpText>Reason why Sample was never purchased.</inlineHelpText>
        <label>Dead Reason</label>
        <picklist>
            <controllingField>Dead__c</controllingField>
            <picklistValues>
                <fullName>Company went out of business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost of product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer lost bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Explain in Comments section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project cancelled</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Sample Request dead?</description>
        <inlineHelpText>Is the Sample Request dead?  If checked, it&apos;s true.  If it&apos;s unchecked, it&apos;s false.</inlineHelpText>
        <label>Dead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Annual_Pounds__c</fullName>
        <description>Estimated annual usage of the sampled product in pounds.</description>
        <inlineHelpText>Estimated annual usage of the sampled product in pounds.</inlineHelpText>
        <label>Est. Annual Pounds</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Annual_Sales__c</fullName>
        <description>Estimated Annual Sales in dollars.</description>
        <inlineHelpText>Estimated Annual Sales in dollars.</inlineHelpText>
        <label>Est. Annual Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedPurchasingDate__c</fullName>
        <label>Est. Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <description>Peter Romero approves additions, deletions and changes to the list of Forms.</description>
        <label>Form</label>
        <picklist>
            <picklistValues>
                <fullName>Aerosol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Briquettes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coarse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coarse Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crystal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crystal Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directly Compressible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extruded Dust Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extruded Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Crystal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Granular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Crystal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Granular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastille</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pellet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plate</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GS_E_Product_Manager__c</fullName>
        <formula>Product2Id__r.GS_E_Product_Manager__r.FirstName + &quot; &quot; + Product2Id__r.GS_E_Product_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS&amp;E Product Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Peter Romero approves any additions, deletions or changes to grades.</description>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>BR Pharm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemically Pure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diaphragm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC EC Cosmetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC EC Cosmetic Kosher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC EC Kosher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC Kosher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC Kosher NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC NF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC NF Kosher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feed Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Kosher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fragrance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi Purity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhibited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kosher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-compendial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF Kosher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Producer_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IC Producer Partner</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Sample Requests (IC Producer Partner)</relationshipLabel>
        <relationshipName>IC_Producer_Partner_Waste_Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IfNoWhenWillTestOccur__c</fullName>
        <description>Date sample testing was started.</description>
        <inlineHelpText>Date sample testing was started.</inlineHelpText>
        <label>Testing Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IndustryApplication__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Adhesives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture/Fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biofuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Producers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elastomers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics - Circuit Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics - Semi Conductor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy - Petroleum Refinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Flavor Extracts/Syrup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food - Food Preparations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Products - Pulp/Paper Mill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household &amp; Industrial Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint &amp; Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plating/Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preservatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller/Subdistributor</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewReplacement__c</fullName>
        <label>Replacement?</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>What is the next step in the process to get the sample approved?</description>
        <inlineHelpText>What is the next step in the process to get the sample approved?</inlineHelpText>
        <label>Next Steps</label>
        <picklist>
            <controllingField>Reason_Not_Approved__c</controllingField>
            <picklistValues>
                <fullName>New Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None - Fill in &quot;Dead Reason&quot;</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N30000000jjPREAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProducerContactName__c</fullName>
        <description>Added on 12/6 per request of WER</description>
        <label>Producer Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProducerSample__c</fullName>
        <description>The next release of SFDC coming before the end of the year has some new functionality that can help us determine how best to do this in the long run.  I’d like to see if you can limp along with maybe one additional field, the “Producer Sample Number” field or whatever we call it and then see how the new capabilities play into our plans.

 

Does that sound reasonable?

 

Brian Feldtman</description>
        <label>Producer Sample #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_NAME__c</fullName>
        <description>Name of the Producer of the Product.  This might differ from the Supplier of the Product.</description>
        <inlineHelpText>Name of the Producer of the Product.  This might differ from the Supplier of the Product.</inlineHelpText>
        <label>Producer</label>
        <picklist>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albright &amp; Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcan Intl Network US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allchem Ind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allied Universal Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alnor Oil Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alon USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluchem Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amarna Company</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Producer_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Sample Request (Producer)</relationshipLabel>
        <relationshipName>Sample_Request_Producers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProducersPhone__c</fullName>
        <description>Added by request by WER on 12/6</description>
        <label>Producer&apos;s Phone Number + Ext.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>R00N30000000jjIFEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>Product Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductReplaced__c</fullName>
        <label>Replacement Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Product2Id__r.Product_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <description>Product Manager from Product Object.</description>
        <formula>Product2Id__r.Product_Manager__r.FirstName  &amp; &quot; &quot; &amp;  Product2Id__r.Product_Manager__r.LastName</formula>
        <label>Product Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <formula>Product2Id__r.Sub_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sub Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Not_Approved__c</fullName>
        <description>Why was the sample not approved?</description>
        <inlineHelpText>Why was the sample not approved?</inlineHelpText>
        <label>Reason Not Approved?</label>
        <picklist>
            <controllingField>Approved__c</controllingField>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesh Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH (hi/lo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solubility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Explain in Comments Section below</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>Date Sample was received.</description>
        <inlineHelpText>Date Sample was received.</inlineHelpText>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestDate__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestSource__c</fullName>
        <description>New field to support National Campaigns per Brian Feldtman 9/9/2005</description>
        <label>Request Source</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Univar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VanNET</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequestedBy__c</fullName>
        <label>Requested By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SampleOrderDate__c</fullName>
        <label>Sample Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SampleSizeNeeded__c</fullName>
        <label>Sample Size Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SampleSizeOther__c</fullName>
        <label>Actual Sample Size</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Number__c</fullName>
        <description>Formula field duplicating the &quot;Sample Request #&quot; field so that Market Development can run and export reports to Exact Target without encountering an error.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Request Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipUrgency__c</fullName>
        <label>Ship Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>Standard (7 - 10 days)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rush (3 - 5 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShippingCompany__c</fullName>
        <description>This is the shipping company used to send the sample.  Field added by request of Kent on 03/50</description>
        <label>Shipping Company</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Express</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpecificApplicationUse__c</fullName>
        <description>To match Specific Use field on the CPP and Opportunity object..  Changed from Specific Use to &quot;Application&quot; per Shirley Schumacher,</description>
        <label>Application</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>At what stage in the process is this sample request?</description>
        <inlineHelpText>At what stage in the process is this sample request?</inlineHelpText>
        <label>Sample Request Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commitment to Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bench Sample</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <description>Enter a tracking number for the Sample.  This is a request by Kent on 03/05</description>
        <label>Tracking Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to last non-System Admin to modify this Sample. Modifiable by Apex only.</description>
        <label>User Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedDate__c</fullName>
        <description>Non-Admin user who last modified this record.</description>
        <label>User Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Sample Request</label>
    <listViews>
        <fullName>Actual_Purchased_Date_Populated</fullName>
        <columns>NAME</columns>
        <columns>AccountId__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>Actual_Purchase_Date__c</columns>
        <columns>Product2Id__c</columns>
        <columns>ProductNumber__c</columns>
        <columns>ProductDescription__c</columns>
        <columns>Producer_NAME__c</columns>
        <columns>RequestDate__c</columns>
        <columns>Stage__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Actual_Purchase_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Actual Purchased Date Populated</label>
        <language>en_US</language>
    </listViews>
</CustomObject>